cluster/gitops/istio-system/kiali/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: &app_name kiali
  labels:
    app.kubernetes.io/instance: *app_name
    app.kubernetes.io/part-of: *app_name
spec:
  hostnames:
    - kiali.${SECRET_PUBLIC_DOMAIN_NAME}
  parentRefs:
    - name: internal-gateway
      namespace: istio-system
  rules:
    - backendRefs:
        - name: *app_name
          port: 20001
      matches:
        - path:
            type: PathPrefix
            value: /
