cluster/gitops/istio-system/kiali/app/netpol.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/main/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: kiali
specs:
  - description: kiali
    endpointSelector:
      matchLabels:
        app.kubernetes.io/part-of: kiali
        app.kubernetes.io/name: kiali
    egress:
      # Get info about k8s resources
      - toEntities:
          - kube-apiserver
        toPorts:
          - ports:
              - port: "6443"
                protocol: TCP
      # DNS resolution
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              endpoints.netpols.home.arpa/cluster-dns: "true"
        toPorts:
          - ports:
              - port: "53"
                protocol: UDP
              - port: "53"
                protocol: TCP
      # Access Istio metrics directly
      - toEndpoints:
          - matchLabels:
              app.kubernetes.io/part-of: istio
              app.kubernetes.io/name: istiod
        toPorts:
          - ports:
              - port: http-monitoring
                protocol: TCP
      # Read time series from VictoriaMetrics
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/time-series-supplier: "true"
        toPorts:
          - ports:
              - port: "8427"
                protocol: TCP
      # Access dashboards in Grafana
      - toEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/internal-dashboard-supplier: "true"
        toPorts:
          - ports:
              - port: grafana-http
                protocol: TCP
    ingress:
      # Kubelet for healthcheck
      - fromEntities:
          - host
        toPorts:
          - ports:
              - port: api-port
                protocol: TCP
      # Gateway to webservice
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: networking
              app.kubernetes.io/name: ingress-gateways
              gateway.networking.k8s.io/gateway-name: internal-gateway
        toPorts:
          - ports:
              - port: api-port
                protocol: TCP
      # Metrics
      - fromEndpoints:
          - matchLabels:
              io.kubernetes.pod.namespace: monitoring
              endpoints.netpols.home.arpa/metrics-scraper: "true"
        toPorts:
          - ports:
              - port: http-metrics
                protocol: TCP
